--- a/findyourdea/finder/templates/finder/index.html
+++ b/findyourdea/finder/templates/finder/index.html
@@ -7,24 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    {%load static %}
+    <link rel="stylesheet" href="{% static '/styles.css' %}" />
     <title>Find Your DEA</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success" id="navbar">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Find Your DEA</a>
+            <a class="navbar-brand" href="/">Find Your DEA</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Listado</a>
-                    <a class="nav-link" href="#">Users</a>
+                    <a class="nav-link active" aria-current="page" href="/listado">Listado</a
+            >
+            <a class="nav-link active" href="#">Users</a>
                 </div>
             </div>
         </div>
     </nav>
+    <main class="container">
+        <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem">
+                {%load static%}
+                <img src="{% static '/img/dea.png'%}" class="card-img-top" alt="..." />
+                <div class="card-body">
+                    <h5 class="card-title">{{dea.direccion_via_nombre}}</h5>
+                    <p class="card-text">{{dea.horario_acceso}}</p>
+                    <a href="{{url}}" class="btn btn-success">Maps</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
