--- a/findyourdea/finder/templates/finder/index.html
+++ b/findyourdea/finder/templates/finder/index.html
@@ -36,7 +36,9 @@
                 <div class="card-body">
                     <h5 class="card-title">{{dea.direccion_via_nombre}}</h5>
                     <p class="card-text">{{dea.horario_acceso}}</p>
-                    <a href="{{url}}" class="btn btn-success">Maps</a>
+                    <div class="d-flex justify-content-center">
+                        <a target="_blank" href="{{url}}" class="btn btn-success">Maps</a>
+                    </div>
                 </div>
             </div>
         </div>
